--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "devDependencies": {
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-transform-runtime": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.18.0",
     "babel-runtime": "^6.6.1",
+    "chai": "^3.5.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "del": "^2.2.1",
@@ -40,9 +42,8 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.16.1",
-    "json-loader": "^0.5.4",
-    "babel-plugin-istanbul": "^3.1.2",
     "inject-loader": "^2.0.1",
+    "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
@@ -51,11 +52,11 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.1",
-    "webpack-merge": "^2.4.0",
-    "require-dir": "^0.3.0",
-    "spectron": "^3.4.0",
-    "chai": "^3.5.0",
     "mocha": "^3.0.2",
+    "node-sass": "^4.5.0",
+    "require-dir": "^0.3.0",
+    "sass-loader": "^6.0.3",
+    "spectron": "^3.4.0",
     "style-loader": "^0.13.1",
     "tree-kill": "^1.1.0",
     "url-loader": "^0.5.7",
@@ -65,7 +66,8 @@
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.3.0",
+    "webpack-merge": "^2.4.0"
   },
   "dependencies": {
     "element-ui": "^1.2.3"
